# matrix-interop-demo

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEEP_DIVE.md  Justfile  LICENSE  PERFORMANCE_LOG.md  README.md  SECURITY.md  build.zig  run_benchmark_stages.sh
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: algorithm-implementation.md  performance-investigation.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: bench-master.yml  stale.yml
bench/: bench.zig  cache_info.zig
bench/cache/: common.zig  linux.zig  macos.zig  windows.zig
cpp/: matrix.cpp  matrix.h  matrix_stage1.cpp  matrix_stage2.cpp  matrix_stage3.cpp  matrix_stage4.cpp  matrix_stage5.cpp
rust/: Cargo.toml
rust/src/: matrix.rs  matrix_stage1.rs  matrix_stage2.rs  matrix_stage3.rs  matrix_stage4.rs
zig/: matrix.zig  matrix_stage1.zig  matrix_stage2.zig  matrix_stage3.zig  matrix_stage4.zig
