[package]
name = "matrix_rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
name = "matrix_rs"

[profile.release]
opt-level = 3
lto = "fat"          # Maximum Link-Time Optimization
codegen-units = 1    # Allow global cross-function optimization
panic = "abort"      # Eliminate stack unwinding overhead
overflow-checks = false # Disable integer overflow checks for performance
incremental = false  # Maximize optimization over build speed
